<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LeaderboardActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:fontFamily="@font/gameboy"
        android:text="@string/high_score"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="89dp"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/gameboy"
        android:text="@string/rank"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="89dp"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="168dp"
        android:fontFamily="@font/gameboy"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="97dp"
        android:layout_height="29dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/gameboy"
        android:text="@string/score"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <ScrollView

        android:layout_width="338dp"
        android:layout_height="489dp"
        android:contentDescription="Scrollable view containing leaderboard details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.033"
        tools:ignore="HardcodedText">

        <LinearLayout
            android:id="@+id/ll_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="181dp"
        android:layout_height="37dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/gameboy"
        android:text="@string/enter_name"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_player_name"
        android:layout_width="132dp"
        android:layout_height="56dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/gameboy"
        android:hint="@string/player_name"
        android:maxLength="3"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <ImageButton
        android:id="@+id/bt_add_player"
        android:layout_width="67dp"
        android:layout_height="55dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="60dp"
        android:background="@color/black"
        android:contentDescription="@string/checkmark"
        android:scaleType="fitXY"
        android:src="@drawable/checkmark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/main_menu"
        android:layout_width="414dp"
        android:layout_height="42dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/gameboy"
        android:text="MAIN MENU"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>